src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article.scss
/*!
 * Copyright (c) 2017 Public Library of Science
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
 * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 * DEALINGS IN THE SOFTWARE.
 */

// Import the article lightbox css
@import "article-lightbox";

//  use "// TEMP-PROD:" for temporary styles to match production until all tabs are re-styled
$temp-pad-tabs: rem-calc(8) rem-calc(9);// TEMP-PROD: remove this line. set padding: $pad-small; for  article-tab >tab-title > a
$article-body-width: 755;
$article-sidebar-width: 160;

//shared article Styles
.article-tabs {
  h1 {
    @extend .title-primary;
  }
  h2 {
    @extend .title-secondary;
  }
}

// extensible layout styles
.text-article-intro {
  font-size: $txt-size-default;
  line-height: $line-height;
  color: $grey-med-dark;

  a {
    @include link-text($grey-med-dark, underline);
  }
}

.set-grid {
  @extend .plos-row;
  width: rem-calc(980);
}

.article-body {
  @include plos-grid-column($article-body-width, $gutter: none);
}

.article-aside {
  @extend .hide-for-print;
  @include plos-grid-column($article-sidebar-width, $gutter: right);
  float: right;
}

.title-block {
  @extend .plos-row;
  position: relative;
  background: $white;
  min-height: rem-calc(100);
}

%signposts-tooltip-transition {
  transition-property: all;
  transition-duration: .5s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
}

.signposts {
  .noshow {
    display: none;
  }

  .anime-hide {
    opacity: 0;
  }
  @include plos-grid-column($article-sidebar-width, $gutter: none);
  @extend .inline-list;
  margin: $pad-default $pad-default $pad-default 0;
  float: right;
  text-align: center;
  height: rem-calc(159);
  opacity: 1;
  @include single-transition(opacity);

  li {
    @extend %brand-shaded-blocks;
    float: left;
    border-right: 1px solid $white;
    border-bottom: 1px solid $white;
    padding: $pad-default $pad-xsmall;
    vertical-align: middle;
    text-align: center;
    margin: 0;
    font-weight: $bold;
    font-size: $txt-size-medium-large;
    color: $grey-dark;
    width: rem-calc(80);
    height: rem-calc(80);

    .tools {
      &.highlighted {
        a.metric-term {
          background-color: $plos-default;
          border-radius: $border-radius-default;
          color: $white;
          text-decoration: underline;
        }
        p.visible {
          visibility: visible;
          opacity: 1;
        }
      }
      a {
        @extend %signposts-tooltip-transition;
        font-size: $txt-size-xsmall;
        color: $grey-dark;
        padding: $pad-xsmall;
        margin-bottom: rem-calc(2);

        &.show-tip {
          background-color: $plos-default;
          border-radius: $border-radius-smaller;
          color: $white;
        }
      }

      p {
        @extend %signposts-tooltip-transition;
        background-color: $plos-default;
        border-radius: $border-radius-smaller;
        max-width: rem-calc(280);
        position: absolute;
        text-align: left;
        z-index: map-get($zindex, overlay);
        padding: $pad-xsmall;
        visibility: hidden;
        opacity: 0;

        > a {
          color: $white;
          padding: 0;
        }
      }

      p.saves-tip {
        top: rem-calc(93);
        right: rem-calc(118);
      }
      p.citations-tip {
        top: rem-calc(93);
        right: rem-calc(30);
        .scopus,
        .crossref {
          display: none;
        }
      }
      p.views-tip {
        top: rem-calc(174);
        right: rem-calc(118);
      }
      p.shares-tip {
        top: rem-calc(174);
        right: rem-calc(36);
      }
    }
  }
  .unavailable {
    width: rem-calc($article-sidebar-width);
    border-right: 0;
    border-bottom: 0;
    font-size: $txt-size-xsmall;
    font-weight: normal;
    text-align: right;
    color: $grey-med-dark;
  }
  #loadingMetrics {
    @extend .unavailable;
    position: relative;
    height: rem-calc($article-sidebar-width);

    text-align: center;
    p {
      padding-top: rem-calc(75);
      font-size: $txt-size-medium-large;
    }
  }
  #tooSoon {
    @extend .unavailable;
    padding: $pad-small $pad-small;
  }
  #metricsError {
    @extend .unavailable;
    padding: rem-calc(105) $pad-small $pad-small $pad-default;
    background: $grey-light;
    height: rem-calc($article-sidebar-width);
  }
}

.article-meta {
  //  padding-right: $pad-default;
  @extend .hide-for-print;
}
/* ... */

